<resources>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="startCriteriaDisclaimer" translatable="false">First select the organ system and then view the Start criteria for the related drugs</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_main3" translatable="false">Main3Activity</string>
    <string name="title_activity_navigation_drawer_test" translatable="false">NavigationDrawerTest</string>
    <string name="fragment_text_trans" translatable="false">fragment_text_transition</string>
    <string name="drugs_stopp" translatable="false">Stopp</string>
    <string name="drugs_start" translatable="false">Start</string>
    <string name="sharedPreferencesTag" translatable="false">com.mycompany.myAppName</string>
    <string name="saved_session_public" translatable="false">SESSION_PUBLIC</string>
    <string name="saved_session_private" translatable="false">SESSION_PRIVATE</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="pref_header_general" translatable="false">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="areaCardShowScalesIcon" translatable="false">areaCardShowScalesIcon</string>
    <string name="syncBackEnd" translatable="false">syncBackEnd</string>
    <string name="sessionResumeInformation" translatable="false">sessionResumeInformation</string>
    <string name="patientProgressType" translatable="false">patientProgressType</string>
    <string name="multipleChoiceType" translatable="false">multipleChoiceType</string>
    <string name="title_activity_wheel_picker" translatable="false">WheelPickerActivity</string>
    <string name="title_activity_custom_view_pager" translatable="false">CustomViewPagerActivity</string>
    <string name="action_info" translatable="false">Info</string>
    <string name="app_intro" translatable="false">App intro</string>
    <string name="app_intro_skip" translatable="false">Skip</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_name">GeriatricHelper</string>
    <string name="male" translatable="false">M</string>
    <string name="hint_search">Pesquisar</string>
    <string name="female" translatable="false">F</string>
    <string name="error_invalid_password">A palavra-passe é muito curta</string>
    <string name="error_invalid_email">O endereço de e-mail é inválido</string>
    <string name="error_incorrect_password">A palavra-passe está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="action_sign_in_short" translatable="false">Log in</string>
    <string name="action_log_in" translatable="false">Log in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Palavra-passe</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="create_new_record">Criar novo registo</string>
    <string name="previous_records">Registos anteriores</string>
    <string name="date_of_birth">Data de nascimento</string>
    <string name="action_settings">Definições</string>
    <string name="title_activity_tabs" translatable="false">Separadores</string>
    <string name="action_add_favourite">Adicionar aos favoritos</string>
    <string name="patients_history">Histórico de pacientes</string>
    <string name="my_patients">Pacientes</string>
    <string name="tab_my_patients">Pacientes</string>
    <string name="cga">AGG</string>
    <string name="tab_patients_history">Histórico de pacientes</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="finish_session">Terminar a sessão</string>
    <string name="test_incomplete">Escala incompleta</string>
    <string name="test_not_selected" translatable="false">Teste não selecionado</string>
    <string name="test_result">Resultado</string>
    <string name="patient_sessions">Sessões do paciente</string>
    <string name="action_play_next" translatable="false">Reproduzir o próximo</string>
    <string name="navigation_drawer_close" translatable="false">Fechar navigation drawer</string>
    <string name="navigation_drawer_open" translatable="false">Abrir navigation drawer</string>
    <string name="complete_one_scale_atleast">Precisa de preencher pelo menos uma escala</string>
    <string name="you_must_add_patient">Tem de selecionar um paciente para esta sessão</string>
    <string name="you_must_select_test">Tem de selecionar pelo menos um teste</string>
    <string name="selectPatient">Selecione um paciente</string>
    <string name="drug_prescription">Prescrição</string>
    <string name="hello_blank_fragment">Procure medicamentos…</string>
    <string name="search_drugs">Escreva nome de medicamento…</string>
    <string name="tab_drug_prescription">Prescrição</string>
    <string name="stoppCriteriaDisclaimer">Pesquise pelo nome de um composto ativo ou medicamento e veja os critérios Stopp associados</string>
    <string name="beersCriteriaDisclaimer">Pesquise pelo nome de um composto ativo ou medicamento e veja os critérios Beers associados</string>
    <string name="patient_favorite_add">Paciente adicionado aos favoritos</string>
    <string name="patient_favorite_remove">Paciente removido dos favoritos</string>
    <string name="create_patient_error_gender">Precisa de selecionar o género do paciente</string>
    <string name="create_patient_error_name">Precisa de escrever o nome do paciente</string>
    <string name="action_favorite">favorito</string>
    <string name="search_hint">Dica de pesquisa</string>
    <string name="selected_drugs">Medicamentos selecionados:</string>
    <string name="create_patient_success">Paciente criado com sucesso</string>
    <string name="session_created">Sessão criada com sucesso</string>
    <string name="actions_account">Conta</string>
    <string name="help">Ajuda</string>
    <string name="send_feedback">Enviar comentários</string>
    <string name="drugs_all">Todas</string>
    <string name="help_evaluations_description">Ver as últimas avaliações, pode pesquisar por data.</string>
    <string name="help_features">Funcionalidades</string>
    <string name="help_precription_description" translatable="false">
        Há certos compostos químicos presentes em medicamentos que devem ou não ser prescritos aos pacientes geriátricos.
        De modo a auxiliar os profissionais de saúde a escolher o medicamento mais indicado para um paciente,
        encontram-se compilados os critérios Start, Stopp e de Beers.

        Os critérios Start encontram-se organizados por sistema (urogenital, gastrointestinal, etc) e indicam em que situações
        clínicas certos compostos químicos devem ser prescritos. Os critérios Stopp e de Beers estão organizados da mesma forma
        e indicam quais os compostos a evitar dependendo do historial clínico. QE refere-se a "quality of evidence" e SR é
        "strength of recommendation".
    </string>
    <string name="help_functionalitites_description" translatable="false">
        Esta aplicação permite realizar a AGG e acompanhar a evolução de um paciente, caso o utilizador
        esteja autenticado no sistema. Tem como objetivo auxiliar os profissionais de saúde a aplicar este método e
        fornecer-lhes auxílio enquanto realizam a AGG.\n\n
        Para avaliar um paciente na área pública clique em "Criar Sessão", selecione o género do paciente (o resultado
        de certas escalas depende do género) e depois selecione a escala que pretende avaliar. Estas encontram-se agrupadas por
        áreas. Preencha somente as escalas que achar adequadas, não necessita de preencher todas à partida.
        Quando quiser terminar a sessão volte ao ecrã onde estão todas as áreas, prima o botão "+" e selecione terminar.
        </string>
    <string name="help_patients_description" translatable="false">
        Em Pacientes, na sua área pessoal, pode ver os seus pacientes, as últimas avaliações e os pacientes favoritos.
        As sessões podem ser criadas a partir do perfil do paciente.</string>
    <string name="evaluations">Sessões</string>
    <string name="help_cga">Avaliação Geriátrica Global</string>
    <string name="help_cga_description" translatable="false">
        A Avaliação Geriátrica Global (AGG) é uma avaliação multidimensional e interdisciplinar do idoso:\n
• Capacidade funcional e física;\n
• Estado cognitivo e afetivo;\n
• Estado nutricional;\n
• Situação social;\n
        A AGG é feita através do uso de escalas, as quais permitem uma avaliação objetiva e sistemática
        e medir a evolução do paciente.\n\n

Os seu objetivos são:\n
        • estabelecer e coordenar planos de cuidados,
serviços e intervenções, que respondam aos seus problemas,
às suas necessidades e incapacidades;\n
    • diagnóstico preciso e completo;\n
• Adequar e orientar medidas assistenciais;\n
• Planear estratégias de compensação de défices, reabilitação e prevenção;\n
• Prever um prognóstico mais fiável;\n
• Diminuir o risco iatrogénico;\n
• Facilitar prevenção e acompanhamento;\n
• Melhorar a qualidade de vida e a autonomia;\n
• Atrasar odeclínio funcional e a institucionalização;\n

        \n\n A AGG é composta por:\n
    1.Av. Clínica: Exame clínico; ECD;\n
2.Av. Física:Capacidade física; Marcha e equilíbrio; Nutrição;\n
3.Av. Mental:Cognitiva; Afetiva;\n
4.Av. Funcional: Autonomia; Independência;\n
5.Av. Social: Família; Recursoseconómicos; Rede social.

        \n\n
    Na primeira sessão de avaliação do paciente a AGG é completa, ou seja, todas as esferas devem ser avaliadas.
    </string>
    <string name="notes">Notas</string>
    <string name="tab_sessions">Sessões</string>
    <string name="cga_guide">Guia da AGG</string>
    <string name="login_not_registered">Não está registado? Clique aqui para se registar.</string>
    <string name="tab_personal_area">Página Principal</string>
    <string name="settings">Definições</string>
    <string name="cga_mental_name">Estado Mental</string>
    <string name="cga_functional_name">Estado Funcional</string>
    <string name="cga_nutritional_name">Estado Nutricional</string>
    <string name="cga_social_name">Situação Social</string>
    <string name="drugs_beers" translatable="false">Beers</string>
    <string name="timeline">Timeline</string>
</resources>