<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/mainArea"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/tab_personal_area" />
        <item
            android:id="@+id/patients"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/tab_my_patients" />
        <item
            android:id="@+id/sessions"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/tab_sessions" />
        <item
            android:id="@+id/prescription"
            android:icon="@drawable/pill_black"
            android:title="@string/tab_drug_prescription" />

    </group>

    <!--HelpMainFragment & Feedback-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sendFeedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/send_feedback" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/cga_guide"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/cga_guide" />
    </group>



    <item android:title="@string/actions_account">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="Logout" />
        </menu>
    </item>

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="Sobre" />


</menu>
