<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/drugs_all"
        android:icon="@drawable/pill_white"
        android:title="@string/drugs_all"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/drugs_start"
        android:icon="@drawable/criteria_start"
        android:title="@string/drugs_start"
        app:showAsAction="always"
         />
    <item
        android:id="@+id/drugs_stopp"
        android:icon="@drawable/criteria_stopp"
        android:title="@string/drugs_stopp"
        app:showAsAction="always"
         />
    <item
        android:id="@+id/drugs_beers"
        android:icon="@drawable/criteria_beers"
        android:title="@string/drugs_beers"
        app:showAsAction="always"
         />
</menu>