<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/patient_sessions"
        android:icon="@drawable/ic_sessions_white_24dp"
        android:title="@string/evaluations"
        app:showAsAction="always" />
    <item
        android:id="@+id/patient_notes"
        android:icon="@drawable/ic_note_add_black_24dp"
        android:title="@string/notes"
        app:showAsAction="always" />
    <item
        android:id="@+id/patient_prescriptions"
        android:icon="@drawable/pill_white"
        android:title="@string/drug_prescription"
        app:showAsAction="always" />

    <item
        android:id="@+id/patientTimeline"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/timeline"
        app:showAsAction="always" />

</menu>