<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- CGA -->
            <TextView
                style="@style/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_cga" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/cga" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_cga_description"
                android:textSize="15dp" />



            <!--Features-->
            <TextView
                style="@style/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_features" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_functionalitites_description"
                android:textSize="15dp" />

            <!--Features-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_patients"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_patients_description"
                android:textSize="15dp" />


            <!--Drug prescription-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_prescription"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_precription_description"
                android:textSize="15dp" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>