<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/evaluations"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/tab_sessions" />
        <item
            android:id="@+id/prescription"
            android:icon="@drawable/ic_pill"
            android:title="@string/tab_drug_prescription" />
        <item
            android:id="@+id/patients"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/tab_my_patients" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

</menu>
